fixing layout issues

--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -4,8 +4,8 @@
     position: relative;
     display: flex;
     align-items: center;
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 150px;
+    padding-right: 150px;
     flex-direction: column;
     margin-top: 300px;
 
